--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,10 @@
             white-space: -o-pre-wrap;    /* Opera 7 */
             word-wrap: break-word;       /* Internet Explorer 5.5+ */
         }
+
+        .uppercase {
+            text-transform: uppercase
+        }
     </style>
 </head>
 <body>
